# poisson1d

./: .gitignore  CMakeLists.txt  INSTALL  README
cmake/Modules/: FindMatplotlib.cmake  FindMuParser.cmake  FindPyQt4.cmake  FindZeroMQ.cmake
src/: CMakeLists.txt  driver.py  p1d_assembler.cpp  p1d_assembler.hpp  p1d_common.hpp  p1d_distributor.cpp  p1d_distributor.hpp  p1d_driver.py  p1d_gatherer.cpp  p1d_gatherer.hpp  p1d_helper_functions.cpp  p1d_helper_functions.hpp  p1d_merger.cpp  p1d_merger.hpp  p1d_mesh.cpp  p1d_mesh.hpp  p1d_mesh_iterator.cpp  p1d_mesh_iterator.hpp  p1d_packable.hpp  p1d_packable.tmpl.hpp  p1d_partitioner.cpp  p1d_partitioner.hpp  p1d_python_binding.cpp  p1d_solver.cpp  p1d_solver.hpp  p1d_structs.cpp  p1d_structs.hpp  p1d_worker.cpp  p1d_worker.hpp  sink-nosolve.cpp  sink.cpp  ventilator.cpp  worker.cpp
tests/: CMakeLists.txt  test_assembler.cpp  test_assembler_matrix.cpp  test_assembler_rhs.cpp  test_boost_python.cpp  test_boost_python.py  test_job.cpp  test_job_result.cpp  test_merger.cpp  test_merger_matrix.cpp  test_merger_rhs.cpp  test_mesh.cpp  test_mesh_packing.cpp  test_muparser.cpp  test_partitioner.cpp  test_problem.cpp  test_python_binding.cpp  test_python_binding.py  test_solution.cpp  test_solver.cpp  test_zeromq.cpp
